code updated 3