@@ -1,6 +1,6 @@
 package com.shopease.backend.controller;
 
-import com.shopease.backend.entity.AuthRequest;
+import com.shopease.backend.database.mysql.entity.AuthRequest;
 import com.shopease.backend.enumfile.Role;
 import com.shopease.backend.util.TokenGenerateUtil;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,15 +13,19 @@ import java.util.stream.Collectors;
 @RestController
 @RequestMapping("/api")
 public class AuthController {
-    @Autowired
-    TokenGenerateUtil tokenGenerateUtil;
+    private final TokenGenerateUtil tokenGenerateUtil;
+
+    public AuthController(TokenGenerateUtil tokenGenerateUtil) {
+        this.tokenGenerateUtil = tokenGenerateUtil;
+    }
 
     @GetMapping("/check")
     public String check() {
         return "hello /api/authenticate checked";
     }
+
     @GetMapping("/authenticate")
-    public String generateToken(@RequestBody AuthRequest authRequest){
+    public String generateToken(@RequestBody AuthRequest authRequest) {
         return tokenGenerateUtil.generateToken(authRequest);
     }
 
@@ -29,6 +33,6 @@ public class AuthController {
     public List<String> getAllRoles() {
         return Arrays.stream(Role.values())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
